<resources>
    <string name="app_name">Ditto</string>
    <string name="dimension_ratio_square">1:1</string>
    <string name="pokemon_artwork_description">Pokemon Artwork</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Profile  -->
    <string name="profile_header">TRAINER</string>
    <string name="profile_name">Red</string>
    <string name="profile_name_hint">Enter username</string>
    <string name="profile_img_desc">Trainer image</string>
    <string name="profile_edit_desc">Change profile image button</string>
    <string name="profile_id">IDNo.</string>
    <string name="profile_region">REGION</string>
    <string name="profile_region_val">Kanto</string>
    <string name="profile_score">SCORE</string>
    <string name="choose_profile">Choose profile image</string>
    <string name="done">Done</string>

    <!-- Action Buttons -->
    <string name="action_profile">Profile</string>

    <!-- Guess Game-->
    <string name="guess_game_title">Who\'s that Pokemon?</string>
    <string name="guess_game_instruc">Test your Pokemon knowledge with a quick guessing game. Given the hints, type in the mystery Pokemon\'s name and score!</string>
    <string name="start_game">Start</string>
    <string name="pkmn_name_tv">Pokemon Name</string>
    <string name="pkmn_desc_tv">Pokemon Description</string>
    <string name="pkmn_dex_num_tv">Pokedex Number</string>
    <string name="user_guess">Enter your guess</string>
    <string name="submit_ans">Submit Answer</string>
    <string name="next_question">Next</string>
    <string name="play_again">Play Again</string>
    <string name="guess_game_results">"You scored a %d out of %d!"</string>
    <string name="guess_game_dex_hint">Pokedex Number: %d</string>
</resources>