<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/poke_red"
    tools:context=".activity.GuessingGameActivity">

    <LinearLayout
        android:id="@+id/gameInstructionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/guess_game_margin_med"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/guess_game_margin_med">

        <TextView
            android:id="@+id/tvGameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_game_title"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:layout_marginBottom="@dimen/guess_game_margin_sm"
            android:textSize="@dimen/guess_game_header"
            app:layout_constraintBottom_toTopOf="@id/tvGameInstructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGameInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess_game_instruc"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/guess_game_subheader"
            app:layout_constraintBottom_toTopOf="@id/startGameBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameInstructionsLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/pkmnSprite"
        app:layout_constraintBottom_toTopOf="@+id/descHintTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        android:visibility="gone"
        android:elevation="@dimen/guess_game_margin_sm"
        android:layout_width="@dimen/guess_game_img_width"
        android:layout_height="@dimen/guess_game_img_height"
        app:layout_constraintTop_toBottomOf="@+id/gameInstructionsLayout"
        tools:srcCompat="@drawable/who_pkmn" />

    <TextView
        android:id="@+id/pokemonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkmn_name_tv"
        android:textColor="@color/white"
        android:textSize="@dimen/guess_game_hints"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/pkmnSprite"
        app:layout_constraintBottom_toTopOf="@+id/descHintTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descHintTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/guess_game_margin_large"
        android:layout_marginStart="@dimen/guess_game_margin_xl"
        android:layout_marginEnd="@dimen/guess_game_margin_xl"
        android:textSize="@dimen/guess_game_hints"
        android:layout_marginBottom="@dimen/guess_game_margin_large"
        android:text="@string/pkmn_desc_tv"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/pokemonName"
        app:layout_constraintBottom_toTopOf="@+id/idHintTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idHintTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkmn_dex_num_tv"
        android:visibility="gone"
        android:textSize="@dimen/guess_game_hints"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/descHintTv"
        app:layout_constraintBottom_toTopOf="@+id/userGuessInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userGuessInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user_guess"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/makeGuessBtn"
        app:layout_constraintTop_toBottomOf="@id/idHintTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/makeGuessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_ans"
        android:visibility="gone"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userGuessInput" />

    <Button
        android:id="@+id/nextQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:visibility="gone"
        android:layout_marginTop="@dimen/guess_game_margin_large"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idHintTv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvGameResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/guess_game_header"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/playAgainBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tvGameResults"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>